add some decent defaults to the curl config filewq

--- a/curl.conf
+++ b/curl.conf
@@ -1,1 +1,11 @@
 header = key:an-exampleheader
+
+
+
+# Some sensible settings you probably won't want to remove
+
+# We don't want the progress bar
+silent
+
+# We want HTTP headers so we can grep better
+include
